--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
   </head>
   <body>
-    "hello world!"
+    <hi1>Cody's HackCU Demo Site</h1>
+    <h3>Made for </h3>
   </body>
 </html>
