--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <br>
     <ul>
       <li>Attend HackCU IV</li>
+      <li>Go to awesome workshops</li>
+    </ul>
+    <a htef="https://hackcu.org">
   </body>
 </html>
