--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
   </head>
   <body>
-    <h1 style="color:blue font-size:10px"> >Cody's HackCU Demo Site</h1>
+    <h1 style="color:blue font-size:10px"> Cody's HackCU Demo Site</h1>
     <h3> Made for the make your first website demo at HackCU IV </h3>
     <p> This is some long form text on my website </p>
     <br>
