--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <li>Go to awesome workshops</li>
     </ul>
     <a href="https://hackcu.org">HackCU IV Website</a>
-    <img style="max-width: 200px" src="https://assets.rbl.ms/637333/980x.jpg"/>
+    <a href="https://hackcu.org"> <img style="max-width: 200px" src="https://assets.rbl.ms/637333/980x.jpg"/> </a>
       
     <style>
       p{
